<resources>
    <string name="app_name">CafeOtomasyonu</string>
    <string name="txtGiris">Hoşgeldiniz.</string>
    <string name="KullaniciAdi">Kullanıcı Adı</string>
    <string name="Giris">Giriş</string>
    <string name="Sifre">Şifre:</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="cikis">ÇIKIŞ!</string>
    <string name="yonetici_ekran">Yönetici Ekranı</string>
    <string name="Personelislemleri">Personel İşlemleri</string>
    <string name="Adisyonislemleri">Button</string>
    <string name="adisyonislemleri">Adisyon İşlemleri</string>
    <string name="Ayarlar">Ayarlar</string>
    <string name="l_tfen_kullan_c_ad_n_z_giriniz">Lütfen Kullanıcı Adınızı Giriniz.</string>
    <string name="l_tfen_ifrenizi_giriniz">Lütfen Şifrenizi Giriniz.</string>
    <string name="resim">resim</string>
    <string name="adisyon_islemleri">Adisyon İşlemleri</string>
    <string name="button">Button</string>
    <string name="MASA_1">MASA 1</string>
    <string name="MASA_2">MASA 2</string>
    <string name="MASA_3">MASA 3</string>
    <string name="MASA_4">MASA 4</string>
    <string name="MASA_5">MASA 5</string>
    <string name="MASA_6">MASA 6</string>
    <string name="MASA_7">MASA 7</string>
    <string name="MASA_8">MASA 8</string>
    <string name="MASA_9">MASA 9</string>
    <string name="MASA_10">MASA 10</string>
    <string name="MASA_11">MASA 11</string>
    <string name="MASA_12">MASA 12</string>
    <string name="MASA_13">MASA 13</string>
    <string name="MASA_14">MASA 14</string>
    <string name="MASA_15">MASA 15</string>
    <string name="MASA_16">MASA 16</string>
    <string name="txtAnaSayfaPersonel">Personel Girişi</string>
    <string name="txtPersonelIslemleri">Personel İşlemleri</string>
    <string name="Adisyon">Adisyon İşlemleri</string>

    <string name="masa">masa adı</string>
    <string name="btnSogukIcecekler">Soğuk İçecekler</string>
    <string name="btnMilkshake">Milkshakeler</string>
    <string name="btnSicakIcecekler">Sıcak içecekler</string>
    <string name="btnTatliVePasta">Tatli ve Pastalar</string>
    <string name="btnYiyecekler">Yiyecekler</string>
    <string name="fragmentten_geldi">fragmentten geldi</string>
    <string name="milkshekeler">milkshakeler</string>
    <string name="rbtnYiyecek">Yiyecek</string>
    <string name="rbtnIcecek">İçecek</string>
    <string name="radiobutton">RadioButton</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="MASA2">MASA 2</string>
    <string name="Kebap">KEBAP=10TL</string>
    <string name="DELETE">DELETE</string>
    <string name="txtPersonelIslemleri1">Personel İşlemleri</string>
    <string name="PtxtPersonelAdi">Personel Adı</string>
    <string name="ptxtPersonelSoyadi">Personel Soyadı</string>
    <string name="btnPersonelEkle">Personel Ekle</string>
    <string name="btnPersonelSil">Personel Sil</string>
    <string name="kuru_fasulye_15tl">KURU FASULYE=15TL</string>
    <string name="makarna_8tl">MAKARNA=8TL</string>
    <string name="btnPersonelDuzenle">Personel Düzenle</string>
    <string name="btnPersonelListele">Personel Listele</string>
    <string name="personel_telefon_no">Personel Telefon No</string>
    <string name="personel_sifresi">Personel Sifresi</string>
    <string name="silmeislemiicinkullan">Sadece Silme İşlemi İçin Kullanınız!</string>
    <string name="ETXTİd">İD</string>
    <string name="btnMasaKapat">Masayı Kapat</string>
    <string name="liste">liste</string>
    <string name="verilen_sipari_ler">Verilen Siparişler:</string>
    <string name="Masa2">MASA2</string>
    <string name="kebap">KEBAP:10TL</string>
    <string name="kurufasulye">KURU FASULYE:15TL</string>
    <string name="makarna">MAKARNA:8TL</string>
    <string name="sil">SİL</string>
    <string name="sil2">SİL</string>
    <string name="masa3">MASA3</string>
    <string name="btnkebap3">KEBAP:10TL</string>
    <string name="btnKuruFasulye">KURU FASULYE:15TL</string>
    <string name="btnMakarna3">MAKARNA:8TL</string>
    <string name="btnSil3">SİL</string>
    <string name="verilensiparisler">Verilen Siparişler</string>
</resources>
