<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonelIslemleri">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FC0808"
        android:gravity="center"
        android:text="@string/txtPersonelIslemleri"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etxtPersonelAdi"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/PtxtPersonelAdi"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/etxtPersonelSoyadi"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ptxtPersonelSoyadi"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/etxtPersonelTel"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/personel_telefon_no"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/etxtPersonelSifre"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/personel_sifresi"
        android:autofillHints="" tools:targetApi="o" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silmeislemiicinkullan" />

    <EditText
        android:id="@+id/etxtid"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ETXTİd"
        android:importantForAutofill="no" tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/Islemler"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/btnPersonelKaydet"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:onClick="Pekle_onClick"
            android:text="@string/btnPersonelEkle" />

        <Button
            android:id="@+id/btnPersonelSil"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:onClick="Psil_onClick"
            android:text="@string/btnPersonelSil" />

        <Button
            android:id="@+id/btnPersonelListele"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPersonelListele" />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"

        android:layout_width="match_parent"
        android:layout_height="277dp"

        android:layout_marginTop="16dp"

        />

</LinearLayout>