<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Masa_2" >

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:gravity="center"
        android:background="#EE0505"
        android:text="@string/Masa2"
        android:textColor="#FFFCFC"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnKebap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:textSize="12sp"
            android:text="@string/kebap" />

        <Button
            android:id="@+id/btnKuruFasulye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:textSize="12sp"
            android:text="@string/kurufasulye" />

        <Button
            android:id="@+id/btnMakarna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:textSize="12sp"
            android:text="@string/makarna" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSil2"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:text="@string/sil2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/verilen_sipari_ler"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold|italic"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="381dp" />

    <Button
        android:id="@+id/temizle2"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:backgroundTint="#965C5C"
        android:text="@string/btnMasaKapat"
        android:textColor="#FFFFFF" />
</LinearLayout>